/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "frameworks/base/core/proto/android/content/configuration.proto";
import "frameworks/base/core/proto/android/graphics/rect.proto";
import "frameworks/base/core/proto/android/view/displayinfo.proto";
import "frameworks/base/core/proto/android/view/windowlayoutparams.proto";

package com.android.server.wm.proto;

option java_multiple_files = true;

message WindowManagerServiceProto {
  WindowManagerPolicyProto policy = 1;
  /* window hierarchy root */
  RootWindowContainerProto root_window_container = 2;
  IdentifierProto focused_window = 3;
  string focused_app = 4;
  IdentifierProto input_method_window = 5;
  bool display_frozen = 6;
  int32 rotation = 7;
  int32 last_orientation = 8;
  AppTransitionProto app_transition = 9;
}

/* represents DisplayContent */
message RootWindowContainerProto {
  WindowContainerProto window_container = 1;
  repeated DisplayProto displays = 2;
  /* window references in top down z order */
  repeated IdentifierProto windows = 3;
}

/* represents PhoneWindowManager */
message WindowManagerPolicyProto {
  .android.graphics.RectProto stable_bounds = 1;
}

/* represents AppTransition */
message AppTransitionProto {
  enum AppState {
    APP_STATE_IDLE = 0;
    APP_STATE_READY = 1;
    APP_STATE_RUNNING = 2;
    APP_STATE_TIMEOUT = 3;
  }
  AppState app_transition_state = 1;
  /* definitions for constants found in {@link com.android.server.wm.AppTransition} */
  enum TransitionType {
    TRANSIT_NONE = 0;
    TRANSIT_UNSET = -1;
    TRANSIT_ACTIVITY_OPEN = 6;
    TRANSIT_ACTIVITY_CLOSE = 7;
    TRANSIT_TASK_OPEN = 8;
    TRANSIT_TASK_CLOSE = 9;
    TRANSIT_TASK_TO_FRONT = 10;
    TRANSIT_TASK_TO_BACK = 11;
    TRANSIT_WALLPAPER_CLOSE = 12;
    TRANSIT_WALLPAPER_OPEN = 13;
    TRANSIT_WALLPAPER_INTRA_OPEN = 14;
    TRANSIT_WALLPAPER_INTRA_CLOSE = 15;
    TRANSIT_TASK_OPEN_BEHIND = 16;
    TRANSIT_TASK_IN_PLACE = 17;
    TRANSIT_ACTIVITY_RELAUNCH = 18;
    TRANSIT_DOCK_TASK_FROM_RECENTS = 19;
    TRANSIT_KEYGUARD_GOING_AWAY = 20;
    TRANSIT_KEYGUARD_GOING_AWAY_ON_WALLPAPER = 21;
    TRANSIT_KEYGUARD_OCCLUDE = 22;
    TRANSIT_KEYGUARD_UNOCCLUDE = 23;
  }
  TransitionType last_used_app_transition = 2;
}

/* represents DisplayContent */
message DisplayProto {
  WindowContainerProto window_container = 1;
  int32 id = 2;
  repeated StackProto stacks = 3;
  DockedStackDividerControllerProto docked_stack_divider_controller = 4;
  PinnedStackControllerProto pinned_stack_controller = 5;
  /* non app windows */
  repeated WindowTokenProto above_app_windows = 6;
  repeated WindowTokenProto below_app_windows = 7;
  repeated WindowTokenProto ime_windows = 8;
  int32 dpi = 9;
  .android.view.DisplayInfoProto display_info = 10;
  int32 rotation = 11;
  ScreenRotationAnimationProto screen_rotation_animation = 12;
}


/* represents DockedStackDividerController */
message DockedStackDividerControllerProto {
  bool minimized_dock = 1;
}

/* represents PinnedStackController */
message PinnedStackControllerProto {
  .android.graphics.RectProto default_bounds = 1;
  .android.graphics.RectProto movement_bounds = 2;
}

/* represents TaskStack */
message StackProto {
  WindowContainerProto window_container = 1;
  int32 id = 2;
  repeated TaskProto tasks = 3;
  bool fills_parent = 4;
  .android.graphics.RectProto bounds = 5;
  bool animation_background_surface_is_dimming = 6;
}

/* represents Task */
message TaskProto {
  WindowContainerProto window_container = 1;
  int32 id = 2;
  repeated AppWindowTokenProto app_window_tokens = 3;
  bool fills_parent = 4;
  .android.graphics.RectProto bounds = 5;
  .android.graphics.RectProto temp_inset_bounds = 6;
}

/* represents AppWindowToken */
message AppWindowTokenProto {
  /* obtained from ActivityRecord */
  string name = 1;
  WindowTokenProto window_token = 2;
}

/* represents WindowToken */
message WindowTokenProto {
  WindowContainerProto window_container = 1;
  int32 hash_code = 2;
  repeated WindowStateProto windows = 3;
}

/* represents WindowState */
message WindowStateProto {
  WindowContainerProto window_container = 1;
  IdentifierProto identifier = 2;
  int32 display_id = 3;
  int32 stack_id = 4;
  .android.view.WindowLayoutParamsProto attributes = 5;
  .android.graphics.RectProto given_content_insets = 6;
  .android.graphics.RectProto frame = 7;
  .android.graphics.RectProto containing_frame = 8;
  .android.graphics.RectProto parent_frame = 9;
  .android.graphics.RectProto content_frame = 10;
  .android.graphics.RectProto content_insets = 11;
  .android.graphics.RectProto surface_insets = 12;
  WindowStateAnimatorProto animator = 13;
  bool animating_exit = 14;
  repeated WindowStateProto child_windows = 15;
}

message IdentifierProto {
  int32 hash_code = 1;
  int32 user_id = 2;
  string title = 3;
}

/* represents WindowStateAnimator */
message WindowStateAnimatorProto {
  .android.graphics.RectProto last_clip_rect = 1;
  WindowSurfaceControllerProto surface = 2;
}

/* represents WindowSurfaceController */
message WindowSurfaceControllerProto {
  bool shown = 1;
  int32 layer = 2;
}

/* represents ScreenRotationAnimation */
message ScreenRotationAnimationProto {
  bool started = 1;
  bool animation_running = 2;
}

/* represents WindowContainer */
message WindowContainerProto {
  ConfigurationContainerProto configuration_container = 1;
  int32 orientation = 2;
}

/* represents ConfigurationContainer */
message ConfigurationContainerProto {
  .android.content.ConfigurationProto override_configuration = 1;
  .android.content.ConfigurationProto full_configuration = 2;
  .android.content.ConfigurationProto merged_override_configuration = 3;
}
